--- a/src/renderer/assets/styles/public.scss
+++ b/src/renderer/assets/styles/public.scss
@@ -1,4 +1,4 @@
-@import url('//at.alicdn.com/t/font_754618_z4o1vr9zqy.css');
+@import url('//at.alicdn.com/t/font_754618_fspcbgdxm5i.css');
 img {
     vertical-align: middle;
 }
@@ -32,6 +32,31 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.flex-c-l {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+
+.line-1{
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.line-2{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.line-3{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 /*******************/
