--- a/src/renderer/assets/styles/public.scss
+++ b/src/renderer/assets/styles/public.scss
@@ -1,83 +1,94 @@
 @import url('//at.alicdn.com/t/font_754618_fspcbgdxm5i.css');
+
 img {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .no-drag {
-    -webkit-app-region: no-drag;
+  -webkit-app-region: no-drag;
 }
 
 .pd-10 {
-    padding: 10px;
+  padding: 10px;
 }
 
 .mt-10 {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .mt-5 {
-    margin-top: 5px;
+  margin-top: 5px;
+}
+
+.mb-5 {
+  margin-bottom: 5px;
 }
 
 .font-main {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .font-assist {
-    font-size: 12px;
-    color: #909399;
+  font-size: 12px;
+  color: #909399;
 }
 
 .flex-c-c {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .flex-c-l {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
+.line-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 
-.line-1{
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+.line-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
-.line-2{
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
-.line-3{
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+
+.line-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 /*******************/
 
 .login-dialog {
-    background: #f8f9fa;
+  background: #f8f9fa;
 }
 
-.el-col-20{
-    width: 20%;
+.el-col-20 {
+  width: 20%;
 }
-.hover-bg{
-    transition:background-color 0.3s linear
+
+.hover-bg {
+  transition: background-color 0.3s linear
 }
-.hover-color{
-    transition:color 0.3s linear
+
+.hover-color {
+  transition: color 0.3s linear
 }
+
 /************/
-.el-dialog__wrapper{
-    overflow: hidden;
+.el-dialog__wrapper {
+  overflow: hidden;
 }
-.el-button{
-    border-radius: 0px;
+
+.el-button {
+  border-radius: 0px;
 }
