播放队列优化

--- a/src/renderer/assets/styles/public.scss
+++ b/src/renderer/assets/styles/public.scss
@@ -1,4 +1,4 @@
-@import url('//at.alicdn.com/t/font_754618_4nkhyw6bov8.css');
+@import url('//at.alicdn.com/t/font_754618_49fnlvk2639.css');
 
 img {
   vertical-align: middle;
@@ -91,4 +91,8 @@ img {
 
 .el-button {
   border-radius: 0px;
+}
+
+.ls{
+  padding: 0;
 }
